# Guardian_DHT20_Prj

./: README.md
Guardian_DHT20_Prj/: temp.c  temp.h
Guardian_DHT20_Prj/components/AT_HOST/: Kconfig
Guardian_DHT20_Prj/components/dht20/: dht20.c  firfilter.c
Guardian_DHT20_Prj/components/toolbox/: CMakeLists.txt  Kconfig
Guardian_DHT20_Prj/components/your_custom_component/: CMakeLists.txt
Guardian_DHT20_Prj/components/your_custom_component/include/: your_custom_component.h
Guardian_DHT20_Prj/main/include/: AT_HOST_process.h  AT_HOST_task_queue.h  core.h
Guardian_DHT20_Prj/main/src/: AT_HOST_task_queue.c  core.c
Guardian_DHT20_Prj_b/uart_async_rxtxtasks/: CMakeLists.txt
Guardian_DHT20_Prj_b/uart_async_rxtxtasks/components/AT_HOST/include/: AT_HOST.h
Guardian_DHT20_Prj_b/uart_async_rxtxtasks/components/dht20/: CMakeLists.txt  Kconfig
Guardian_DHT20_Prj_b/uart_async_rxtxtasks/components/dht20/include/: firfilter.h
uart_async_rxtxtasks/: CMakeLists.txt  sdkconfig  sdkconfig.old
uart_async_rxtxtasks/components/AT_HOST/: AT_HOST.c  CMakeLists.txt  Kconfig
uart_async_rxtxtasks/components/dht20/include/: dht20.h
uart_async_rxtxtasks/components/toolbox/: Kconfig  toolbox.c
uart_async_rxtxtasks/components/toolbox/include/: toolbox.h
uart_async_rxtxtasks/components/your_custom_component/: your_custom_component.c
uart_async_rxtxtasks/main/: CMakeLists.txt  core  uart_async_rxtxtasks_main.c
uart_async_rxtxtasks/main/include/: UART_process.h
uart_async_rxtxtasks/main/src/: AT_HOST_process.h  UART_process.c  core.c
(+1 files in other folders)
